[project]
name = "mcp-luxmii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "mcp[cli]>=1.0.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "shopifyapi>=12.7.0",
    "dotenv>=0.9.9",
    "fastmcp>=2.13.0",
]
